add image upload to swagger
